# LatentSpec

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  VALIDATION_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml
action/: Dockerfile  README.md  action.yml  entrypoint.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_auth_tables.py  0003_extensions.py
benches/: bench_streaming.py  bench_z3_concurrency.py
dashboard/: README.md  next.config.js  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts
scripts/: init-db.sql  run_mutation_pass.py  seed_demo_agent.py
scripts/realcorpus/: README.md  autogpt_corpus.py  babyagi_corpus.py  opendevin_corpus.py  run_realcorpus_pipeline.py
src/latentspec/: __init__.py  config.py  db.py  demo.py
src/latentspec/active_learning/: __init__.py  queue.py  synthesis.py
src/latentspec/alerts/: __init__.py  dispatcher.py  pagerduty.py  (+2 more)
tests/: conftest.py  test_active_learning.py  test_adversarial.py  test_alerts.py  test_anomaly.py  test_auth.py  test_calibration.py  test_canonicalization.py  test_checking.py  test_checking_extra.py  test_clustering.py  test_confidence.py  test_dag.py  test_drift.py  test_embeddings.py  test_exporters.py  test_fingerprint.py  test_guardrail.py  test_normalizers.py  test_orchestrator_e2e.py  test_packs.py  test_params_schemas.py  test_redaction_sampling.py  test_regression.py  test_sdk.py  test_sessions.py  test_smt.py  test_statistical_mining.py  test_streaming.py  test_subgraph.py  test_symbolic.py  test_versioning.py
tests/differential/: reference.py  test_differential.py
tests/integration/: conftest.py  test_db_round_trip.py
tests/property/: strategies.py  test_property_api_fuzz.py  test_property_calibration.py  test_property_canonicalisation.py  test_property_checkers.py  test_property_params.py
(+123 files in other folders)
