[project]
name = "latentspec"
version = "0.1.0"
description = "Discover behavioral invariants from AI agent traces"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "LatentSpec" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.39.0",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "z3-solver>=4.13.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
    "hypothesis>=6.115.0",
    "mutmut>=2.5.0",
]

[project.scripts]
latentspec = "latentspec.cli.main:cli"
latentspec-api = "latentspec.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latentspec"]

[tool.hatch.build.targets.wheel.force-include]
"src/latentspec/packs/data" = "latentspec/packs/data"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/latentspec/checking/,src/latentspec/canonicalization/"
runner = ".venv/bin/python -m pytest tests/property tests/differential -q -x --no-header"
tests_dir = "tests/"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
